# speeches_search

./: .gitignore  LICENSE  README.md  docker-compose.yml  log.md  pyproject.toml
docs/: design.md
src/speeches_search/: __init__.py  database.py  indexer.py  logging.py  resources.py  searcher.py  webapp.py
src/speeches_search/speeches_scrape/: scrape.py
src/speeches_search/templates/: index.html
