[project]
name = "speeches_search"
version = "0.1.0"
description = "Semantic Search for BYU Speeches"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "requests>=2.32.5",
]

[project.scripts]
speeches-search = "speeches_search:main"

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"
