[project]
name = "speeches_search"
version = "0.1.0"
description = "Semantic Search for BYU Speeches"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "flask>=3.1.3",
    "lxml>=6.0.2",
    "next-plaid-client>=1.1.1",
    "psycopg[binary]>=3.3.3",
    "requests>=2.32.5",
]

[project.scripts]
speeches-search = "speeches_search:main"
speeches-webapp = "speeches_search.webapp:run_webapp"

[build-system]
requires = ["uv_build>=0.11.1,<0.12.0"]
build-backend = "uv_build"
